added samples to accounts api responses
