# docs/samples/javascript/AccountsAPI.getPublickey.get.js
@@ -1,9 +1,9 @@
 import { rise } from 'risejs'
 
 rise.accounts
-  .getAccount('8093718274007724701R')
-  .then(function({ account }) {
-    console.log(account.balance) // 2973803650603
+  .getPublicKey('8093718274007724701R')
+  .then(function({ publicKey }) {
+    console.log(publicKey) // "7067a911f3a4...
   })
   .catch(function(err) {
     console.log('Error: ', err) // handle error
